update final